--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@feathersjs/client": "^4.5.15",
-    "@feathersjs/feathers": "^4.5.15",
-    "@feathersjs/socketio-client": "^1.2.1",
+    "@feathersjs/client": "4.5.11",
+    "@feathersjs/feathers": "4.5.11",
+    "@feathersjs/socketio-client": "4.5.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,11 +15,13 @@
     "feathers": "^2.2.4",
     "feathers-hooks": "^2.1.2",
     "feathers-socketio": "^2.0.1",
+    "i": "^0.3.7",
+    "npm": "^8.19.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "socket.io-client": "^4.5.3",
+    "socket.io-client": "2.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
